// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multi-select renders correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper empty"
  >
    <span
      class="cloud-select-selected"
      title=""
    />
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon cloud-icon-close-circle-solid"
    />
    <i
      class="cloud-select-select-icon close cloud-icon cloud-icon-down-solid"
    />
  </div>
</div>
`;

exports[`multi-select renders custom option correctly 1`] = `
<div
  class="cloud-select"
>
  <div
    class="cloud-select-wrapper"
  >
    <span
      class="cloud-select-selected"
      title=""
    >
      草莓
    </span>
    <i
      class="cloud-select-select-icon cloud-select-clear-icon cloud-icon cloud-icon-close-circle-solid"
    />
    <i
      class="cloud-select-select-icon close cloud-icon cloud-icon-down-solid"
    />
  </div>
</div>
`;
